objects/APTS_AdjustmentPickList__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Adjustment pick list for Bundle Page</description>
    <fields>
        <fullName>Available_Values__c</fullName>
        <label>Available Values</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_in_Online_Software__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available in Online/Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_in_Print__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available in Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Name__c</fullName>
        <label>Type Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Adjustment pick list</label>
</CustomObject>